// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label > should render 1`] = `
<div>
  <div
    class="inline-block overflow-hidden px-1 text-base font-semibold rounded border-2 no-ligatures text-theme-primary-500 border-theme-primary-100 dark:border-theme-primary-500"
  />
</div>
`;

exports[`Label > should render a large one 1`] = `
<div>
  <div
    class="inline-block overflow-hidden px-1 text-lg font-semibold rounded border-2 no-ligatures text-theme-primary-500 border-theme-primary-100 dark:border-theme-primary-500"
  />
</div>
`;

exports[`Label > should render a small one 1`] = `
<div>
  <div
    class="inline-block overflow-hidden px-1 text-sm font-semibold rounded border-2 no-ligatures text-theme-primary-500 border-theme-primary-100 dark:border-theme-primary-500"
  />
</div>
`;

exports[`Label > should render as solid 1`] = `
<div>
  <div
    class="inline-block overflow-hidden px-1 text-base font-semibold rounded border-2 no-ligatures text-theme-primary-500 border-theme-primary-100 bg-theme-primary-100"
  />
</div>
`;

exports[`Label > should render as solid and danger 1`] = `
<div>
  <div
    class="inline-block overflow-hidden px-1 text-base font-semibold rounded border-2 no-ligatures text-theme-danger-500 border-theme-danger-100 bg-theme-danger-100"
  />
</div>
`;

exports[`Label > should render as solid and default 1`] = `
<div>
  <div
    class="inline-block overflow-hidden px-1 text-base font-semibold rounded border-2 no-ligatures text-theme-success-600 border-theme-success-200 bg-theme-success-200"
  />
</div>
`;

exports[`Label > should render as solid and primary 1`] = `
<div>
  <div
    class="inline-block overflow-hidden px-1 text-base font-semibold rounded border-2 no-ligatures text-theme-primary-500 border-theme-primary-100 bg-theme-primary-100"
  />
</div>
`;

exports[`Label > should render as solid and success 1`] = `
<div>
  <div
    class="inline-block overflow-hidden px-1 text-base font-semibold rounded border-2 no-ligatures text-theme-success-600 border-theme-success-200 bg-theme-success-200"
  />
</div>
`;

exports[`Label > should render danger color 1`] = `
<div>
  <div
    class="inline-block overflow-hidden px-1 text-base font-semibold rounded border-2 no-ligatures text-theme-danger-400 border-theme-danger-100 dark:border-theme-danger-400"
  />
</div>
`;

exports[`Label > should render neutral color 1`] = `
<div>
  <div
    class="inline-block overflow-hidden px-1 text-base font-semibold rounded border-2 dark:bg-transparent no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Label > should render primary color 1`] = `
<div>
  <div
    class="inline-block overflow-hidden px-1 text-base font-semibold rounded border-2 no-ligatures text-theme-primary-500 border-theme-primary-100 dark:border-theme-primary-500"
  />
</div>
`;

exports[`Label > should render success color 1`] = `
<div>
  <div
    class="inline-block overflow-hidden px-1 text-base font-semibold rounded border-2 no-ligatures text-theme-success-600 border-theme-success-200 dark:border-theme-success-600"
  />
</div>
`;

exports[`Label > should render warning color 1`] = `
<div>
  <div
    class="inline-block overflow-hidden px-1 text-base font-semibold rounded border-2 no-ligatures text-theme-warning-700 border-theme-danger-100 dark:border-theme-warning-700"
  />
</div>
`;
